examples/type_system/failing/111_call_arg_anonymous_fn.flx
fn greet(name: String) -> String {
    name
}

fn main() -> Unit {
    let _x = (if true { greet } else { greet })(42)
}
